This the website for firend

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-
+<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/aos.css">
 
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Nabeel di Masook </title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
     <!-- navigation starts -->
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
-            <a href="index.html" class="navbar-brand">Beleniss</a>
+            <a href="index.html" class="navbar-brand">Nabeel Jigr</a>
 
             <div class="collpase navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
@@ -60,7 +60,7 @@
                     data-scrollax-parent="true">
 
                     <div class="col-md-12 col-sm-12 text-center ftco-animate">
-                        <span class="subheading">Beleniss</span>
+                        <span class="subheading">Nabeel Jigr</span>
                         <h1 class="mb-4">Birthday Cake</h1>
                     </div>
 
@@ -75,7 +75,7 @@
                     data-scrollax-parent="true">
 
                     <div class="col-md-12 col-sm-12 text-center ftco-animate">
-                        <span class="subheading">Beleniss</span>
+                        <span class="subheading">Nabeel Jigr</span>
                         <h1 class="mb-4">Wedding Cake</h1>
                     </div>
 
@@ -90,7 +90,7 @@
                     data-scrollax-parent="true">
 
                     <div class="col-md-12 col-sm-12 text-center ftco-animate">
-                        <span class="subheading">Beleniss</span>
+                        <span class="subheading">Nabeel Jigr</span>
                         <h1 class="mb-4">Beleniss Special Dessert</h1>
                     </div>
 
@@ -105,7 +105,7 @@
                     data-scrollax-parent="true">
 
                     <div class="col-md-12 col-sm-12 text-center ftco-animate">
-                        <span class="subheading">Beleniss</span>
+                        <span class="subheading">Nabeel Jigr</span>
                         <h1 class="mb-4">Beleniss Special Pastries</h1>
                     </div>
 
@@ -518,7 +518,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_1.jpg);"></div>
                                         <div class="pl-3">
-                                            <p class="name">Nilay Hirpara</p>
+                                            <p class="name">Nabeel di Masook </p>
                                             <span class="position">Owner</span>
                                         </div>
                                     </div>
@@ -538,7 +538,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_2.jpg);"></div>
                                         <div class="pl-3">
-                                            <p class="name">Nilay Hirpara</p>
+                                            <p class="name">Nabeel di Masook </p>
                                             <span class="position">Owner</span>
                                         </div>
                                     </div>
@@ -558,7 +558,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_3.jpg);"></div>
                                         <div class="pl-3">
-                                            <p class="name">Nilay Hirpara</p>
+                                            <p class="name">Nabeel di Masook </p>
                                             <span class="position">Owner</span>
                                         </div>
                                     </div>
@@ -578,7 +578,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_4.jpg);"></div>
                                         <div class="pl-3">
-                                            <p class="name">Nilay Hirpara</p>
+                                            <p class="name">Nabeel di Masook </p>
                                             <span class="position">Owner</span>
                                         </div>
                                     </div>
@@ -598,7 +598,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_1.jpg);"></div>
                                         <div class="pl-3">
-                                            <p class="name">Nilay Hirpara</p>
+                                            <p class="name">Nabeel di Masook </p>
                                             <span class="position">Owner</span>
                                         </div>
                                     </div>
@@ -615,7 +615,7 @@
 
     <!-- staff section --- chef starts -->
 
-    <section class="ftco-section" id="chef">
+    <!-- <section class="ftco-section" id="chef">
         <div class="container">
             <div class="row justify-content-center mb-5 pb-2">
                 <div class="col-md-12 text-center heading-section ftco-animate">
@@ -694,7 +694,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- staff section --- chef ends -->
 
     <!-- order a cake section starts -->
