--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                                     <h3>Strawberry</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">₹400</span>
+                                    <span class="price">400 pkr</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -363,7 +363,7 @@
                                     <h3>Chocolate Cake</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">₹399</span>
+                                    <span class="price">399 pkr</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -378,7 +378,7 @@
                                     <h3>Red Valvet</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">₹500</span>
+                                    <span class="price">500 pkr</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -398,7 +398,7 @@
                                     <h3>Pineapple</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">₹450</span>
+                                    <span class="price">450 pkr</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -413,7 +413,7 @@
                                     <h3>Belgium Cake</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">₹400</span>
+                                    <span class="price">400 pkr</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -428,7 +428,7 @@
                                     <h3>Cookies</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">₹400</span>
+                                    <span class="price">400 pkr</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -448,7 +448,7 @@
                                     <h3>Blackberries</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">₹400</span>
+                                    <span class="price">400 pkr</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -463,7 +463,7 @@
                                     <h3>Orange</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">₹400</span>
+                                    <span class="price">400 pkr</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -478,7 +478,7 @@
                                     <h3>Mango</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">₹400</span>
+                                    <span class="price">400 pkr</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -512,8 +512,9 @@
                                 </div>
                                 <div class="text">
                                     <p class="mb-4">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa illo corrupti
-                                        ratione voluptatibus recusandae dolore.
+                                        Cake, a sweet treat you adore! It’s a star at birthdays, weddings, and countless other celebrations.
+
+
                                     </p>
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_1.jpg);"></div>
@@ -532,8 +533,7 @@
                                 </div>
                                 <div class="text">
                                     <p class="mb-4">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa illo corrupti
-                                        ratione voluptatibus recusandae dolore.
+                                        Cake, a sweet treat you adore! It’s a star at birthdays, weddings, and countless other celebrations.
                                     </p>
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_2.jpg);"></div>
@@ -552,8 +552,9 @@
                                 </div>
                                 <div class="text">
                                     <p class="mb-4">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa illo corrupti
-                                        ratione voluptatibus recusandae dolore.
+                                        Cake, a sweet treat you adore! It’s a star at birthdays, weddings, and countless other celebrations.
+
+
                                     </p>
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_3.jpg);"></div>
@@ -572,8 +573,9 @@
                                 </div>
                                 <div class="text">
                                     <p class="mb-4">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa illo corrupti
-                                        ratione voluptatibus recusandae dolore.
+                                        Cake, a sweet treat you adore! It’s a star at birthdays, weddings, and countless other celebrations.
+
+
                                     </p>
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_4.jpg);"></div>
@@ -592,8 +594,9 @@
                                 </div>
                                 <div class="text">
                                     <p class="mb-4">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa illo corrupti
-                                        ratione voluptatibus recusandae dolore.
+                                        Cake, a sweet treat you adore! It’s a star at birthdays, weddings, and countless other celebrations.
+
+
                                     </p>
                                     <div class="d-flex align-items-center">
                                         <div class="user-img" style="background-image: url(images/person_1.jpg);"></div>
@@ -874,7 +877,7 @@
                         <p>We serve and take all type of cake orders. You can personalised cake of your own choice. We
                             have the best chef in the city working for us and happying serving to you.
                             <br><br><br>
-                            Belenisscake@gmail.com
+                           Nabeeljigr@gamil.com
                             <br>
                             8888888888
                         </p>
