This the website for firend price change

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                                     <h3>Strawberry</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">400 pkr</span>
+                                    <span class="price ml-4">400pkr</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -363,7 +363,7 @@
                                     <h3>Chocolate Cake</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">399 pkr</span>
+                                    <span class="price ml-2">399 pkr</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -398,7 +398,7 @@
                                     <h3>Pineapple</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">450 pkr</span>
+                                    <span class="price ml-3">450 pkr</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -428,7 +428,7 @@
                                     <h3>Cookies</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">400 pkr</span>
+                                    <span class="price">pkr 400</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -448,7 +448,7 @@
                                     <h3>Blackberries</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">400 pkr</span>
+                                    <span class="price ml-2">400 pkr</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
