--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                                     <h3>Strawberry</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price ml-4">400pkr</span>
+                                    <span class="price ml-4">RS:400</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -363,7 +363,7 @@
                                     <h3>Chocolate Cake</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price ml-2">399 pkr</span>
+                                    <span class="price ml-2">RS:400</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -378,7 +378,7 @@
                                     <h3>Red Valvet</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">500 pkr</span>
+                                    <span class="price">RS:500</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -395,10 +395,10 @@
                         <div class="text">
                             <div class="d-flex">
                                 <div class="one-half">
-                                    <h3>Pineapple</h3>
+                                    <h3>Pine <br>apple</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price ml-3">450 pkr</span>
+                                    <span class="price ml-3">RS:450 </span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -413,7 +413,7 @@
                                     <h3>Belgium Cake</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">400 pkr</span>
+                                    <span class="price">RS:400</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -428,7 +428,7 @@
                                     <h3>Cookies</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">pkr 400</span>
+                                    <span class="price">RS:400</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -445,10 +445,10 @@
                         <div class="text">
                             <div class="d-flex">
                                 <div class="one-half">
-                                    <h3>Blackberries</h3>
+                                    <h3>Black <br> berries</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price ml-2">400 pkr</span>
+                                    <span class="price ml-2">RS:400</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -463,7 +463,7 @@
                                     <h3>Orange</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">400 pkr</span>
+                                    <span class="price">RS:400</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
@@ -478,7 +478,7 @@
                                     <h3>Mango</h3>
                                 </div>
                                 <div class="one-forth">
-                                    <span class="price">400 pkr</span>
+                                    <span class="price">RS:400</span>
                                 </div>
                             </div>
                             <p><span>Strawberry</span>, <span>Chocolate</span>, <span>Berry</span>, <span>Cream</span>
